Renaming twitter lib to prevent conflict.

--- a/lib/notifier/config.haml
+++ b/lib/notifier/config.haml
@@ -1,7 +1,7 @@
 %p.normal
-  %label{ :for => "twitter_notifier_email" } Email Address
-  %input.text#twitter_notifier_email{ :name => "notifiers[Twitter][email]", :value => config["email"], :type => "text" }
+  %label{ :for => "integrity_twitter_notifier_email" } Email Address
+  %input.text#integrity_twitter_notifier_email{ :name => "notifiers[IntegrityTwitter][email]", :value => config["email"], :type => "text" }
  
 %p.normal
-  %label{ :for => "twitter_notifier_pass" } Password
-  %input.text#twitter_notifier_pass{ :name => "notifiers[Twitter][pass]", :value => config["pass"], :type => "text" }
+  %label{ :for => "integrity_twitter_notifier_pass" } Password
+  %input.text#integrity_twitter_notifier_pass{ :name => "notifiers[IntegrityTwitter][pass]", :value => config["pass"], :type => "text" }
